--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,22 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: ; */
+  /* background: rgb(255, 248, 248);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 248, 248, 0.43323266806722693) 0%,
+    rgba(255, 225, 225, 0.30438112745098034) 70%,
+    rgba(255, 138, 138, 0.22034751400560226) 100%
+  ); */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
