--- a/src/fonts/fontA.css
+++ b/src/fonts/fontA.css
@@ -176,8 +176,8 @@
   cursor: pointer;
   font-size: 19px;
   border-radius: 5em;
-  background: #054821;  
-  border: 1px solid #1351a3;
+  background: #50b57a;  
+  border: 1px solid #50b57a;
   /* border: 1px solid #e8e8e8; */
   color: #ffffff;
   box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
