--- a/src/components/WeprovB.css
+++ b/src/components/WeprovB.css
@@ -121,3 +121,10 @@
     height: auto;
     object-fit: contain;
   }
+
+
+  .weprotxt {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
